<!--
  ~ Copyright 2019 Timothy Logan
  ~ Copyright 2019 Victor Velea
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">MyMadison</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_grades">Grades</string>
    <string name="menu_course">Courses</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="communicate">Communicate</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="enroll">Enroll</string>
    <string name="student_center_fragment">Student Center</string>

    //for the fragment_enroll.xml
    <string name="drop_button">Drop</string>
    <string name="edit_button">Edit</string>
    <string name="add_button">Add</string>
    <string name="swap_button">Swap</string>
    <string name="student_center_button">Back to student center</string>
    <string name="jmu_text_view">Welcome to Tim and Victors app!</string>


    //for the fragment_studentcenter.xml
    <string name="student_center_textField">Welcome to the Student Center</string>
    <string-array name="academics_spinner">
        <item>-- Select an option --</item>
        <item>Search</item>
        <item>Enroll(Add, Drop, Edit, Swap)</item>
        <item>View Shopping Cart</item>
        <item>Schedule Planner</item>
        <item>Academic Planner</item>
        <item>Academic Requirements</item>
        <item>Buy Books</item>
        <item>Class Schedule</item>
    </string-array>




    //for the fragment_scheduleplanner.xml
    <string name="go_to_schedule_planner_button">CLICKING HERE</string>
    <string name="sp_instructions">Go to schedule planner by</string>

    //for fragment_termselector.xml
    <string name="fall_term_button">Fall 2019</string>
    <string name="spring_term_button">Spring 2019</string>
    <string name="summer_term_button">Summer 2019</string>
    <string name="term_instructions">Please select your term</string>



    //for the fragment_academicplanner.xml
    <string name="academic_planner_text_view">Populate me!</string>

    //for the fragment_academicrequirements.xml
    <string name="academic_requirements_textField">This is the academic requirements fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="show_courses">Show Courses</string>
</resources>
