<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2019 Timothy Logan
  ~ Copyright 2019 Victor Velea
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/term_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:clickable="true"
    android:focusable="true">

    <Button
            android:text="@string/fall_term_button"

        android:layout_width="212dp"
            android:layout_height="129dp" android:id="@+id/fall_term_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="140dp"
            android:layout_marginStart="100dp"/>
    <Button
            android:text="@string/spring_term_button"
            android:layout_width="212dp"
            android:layout_height="129dp"
            android:id="@+id/spring_term_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.497" app:layout_constraintTop_toBottomOf="@+id/fall_term_button"/>
    <Button
            android:text="@string/summer_term_button"
            android:layout_width="212dp"
            android:layout_height="129dp"
            android:id="@+id/summer_term_button"
            app:layout_constraintTop_toBottomOf="@+id/spring_term_button" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/term_instructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/term_instructions" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="36dp" app:layout_constraintHorizontal_bias="0.5"
            android:textSize="30sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>